<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFeature.Ui.activity.MainActivity">

    <!-- Background Image -->
    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/company_logo"
        app:layout_constraintBottom_toTopOf="@+id/formContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/formContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/backgroundImage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ViewSwitcher
            android:id="@+id/viewSwitcher"
            android:layout_marginTop="10dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/loginEmailOrMobileLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextColor="@color/dark_gray"
                    android:padding="10dp"
                    android:hint="@string/email_or_mobile_number">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/loginEmailOrMobile"
                        android:layout_width="match_parent"
                        android:textColor="@color/black"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/loginPasswordLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextColor="@color/dark_gray"
                    android:padding="10dp"
                    android:hint="@string/password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/loginPassword"
                        android:textColor="@color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/black"
                    android:text="@string/login" />

                <TextView
                    android:id="@+id/switchToSignup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:text="@string/don_t_have_an_account_sign_up"
                    android:textAlignment="center"
                    android:textColor="@color/cardview_dark_background"
                    android:padding="16dp"
                    android:clickable="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signupEmailOrMobileLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextColor="@color/black"
                    android:padding="10dp"
                    android:hint="@string/email_or_mobile_number">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signupEmailOrMobile"
                        android:textColor="@color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signupPasswordLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextColor="@color/black"
                    android:padding="10dp"
                    android:hint="@string/password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signupPassword"
                        android:textColor="@color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signupConfirmPasswordLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextColor="@color/black"
                    android:padding="10dp"
                    android:hint="@string/confirm_password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signupConfirmPassword"
                        android:textColor="@color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/signupButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/black"
                    android:padding="12dp" />

                <TextView
                    android:id="@+id/switchToLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:text="@string/already_have_an_account_login"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:padding="16dp"
                    android:clickable="true" />
            </LinearLayout>

        </ViewSwitcher>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>