<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginFeature.ui.fragments.LogInFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        android:elevation="0dp"
        android:paddingTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/group_5"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:layout_marginHorizontal="30dp"
            android:textSize="30sp"
            android:textStyle="bold"/>

    </androidx.appcompat.widget.Toolbar>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:paddingHorizontal="10dp"
            android:text="@string/enter_your_email_password"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/pink"
                android:padding="15dp"
                android:text="@string/facebook"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/pink"
                android:padding="15dp"
                android:text="@string/google"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/formContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingHorizontal="10dp"
                android:textSize="18sp"
                android:text="Email" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginEmailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_email"
                android:padding="10dp"
                app:hintTextColor="@color/dark_gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginVertical="20dp"
                android:paddingHorizontal="10dp"
                android:text="Password" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginPasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_password"
                android:padding="10dp"
                app:hintTextColor="@color/dark_gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:padding="10dp"
                android:text="Forget your Password?"
                android:textColor="@color/pink" />


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="40dp"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/pink"
            android:padding="15dp"
            android:textSize="20sp"
            android:layout_marginHorizontal="30dp"
            android:text="@string/log_in"
            android:textColor="@color/white" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>